Fixed wrapping and Integration Acronym

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -7,11 +7,19 @@
   word-break: normal;
 }
 
+.p-key {
+  display: inline-block;
+  margin-top: 1px;
+}
+
+.name {
+  overflow-wrap:break-word;
+}
 
 .objects {
   .object {
     margin-bottom: 12px;
-  
+
     .labels {
       display: flex;
       flex-wrap: wrap;
